--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,10 +1,11 @@
-
+@import url("http://compass-style.org/reference/compass/css3/");
+/* Martin Wolf CodePen Standard */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 
 * {
     margin: 0;
     padding: 0;
-@include box-sizing(border-box);
+    @include box-sizing(border-box);
 }
 
 #about {
@@ -14,6 +15,7 @@
     background: #f7f5eb;
 }
 
+/* END Martin Wolf CodePen Standard */
 
 
 $font-size: 26px;
@@ -33,7 +35,8 @@ p {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -42,17 +45,17 @@ p {
     border: none;
 }
 
-html, body{
+html, body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
 }
 
-body{
+body {
     font-family: monospace;
 }
 
-#home{
+#home {
     position: relative;
     width: 100%;
     height: 100%;
@@ -66,7 +69,7 @@ body{
     background-attachment: fixed;
 }
 
-header{
+header {
     position: fixed;
     top: 0;
     left: 0;
@@ -80,7 +83,7 @@ header{
     z-index: 1000;
 }
 
-.container{
+.container {
     padding-top: 10px;
     width: 1170px;
     margin: 0 auto;
@@ -96,7 +99,7 @@ header{
     justify-content: space-between;
 }
 
-.left{
+.left {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -105,7 +108,7 @@ header{
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     color: #fff;
     font-size: 24px;
     font-weight: 600;
@@ -118,11 +121,11 @@ header{
     font-family: 'Roboto', monospace, sans-serif;
 }
 
-.hm-menu{
+.hm-menu {
     display: none;
 }
 
-nav ul{
+nav ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -132,67 +135,67 @@ nav ul{
     flex-direction: row;
 }
 
-nav ul li{
-    margin-right: 10px;
-}
+    nav ul li {
+        margin-right: 10px;
+    }
 
-nav ul li:last-child{
-    margin-right: 0;
-}
+        nav ul li:last-child {
+            margin-right: 0;
+        }
 
-nav ul li a{
-    position: relative;
-    padding: 0 20px;
-    height: 40px;
-    display: block;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    line-height: 40px;
-    color: #fff;
-    font-size: 14px;
-    letter-spacing: 1px;
-    font-weight: 400;
-    text-align: center;
-    -webkit-transition: .3s all ease-in-out;
-    -o-transition: .3s all ease-in-out;
-    transition: .3s all ease-in-out;
-    overflow: hidden;
-    text-transform: uppercase;
-}
+        nav ul li a {
+            position: relative;
+            padding: 0 20px;
+            height: 40px;
+            display: block;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            line-height: 40px;
+            color: #fff;
+            font-size: 14px;
+            letter-spacing: 1px;
+            font-weight: 400;
+            text-align: center;
+            -webkit-transition: .3s all ease-in-out;
+            -o-transition: .3s all ease-in-out;
+            transition: .3s all ease-in-out;
+            overflow: hidden;
+            text-transform: uppercase;
+        }
 
-nav ul li a::after{
-    position: absolute;
-    z-index: -1;
-    content: '';
-    width: 100%;
-    height: 100%;
-    left: -150%;
-    top: 0;
-    -webkit-transition: .5s all ease-in-out;
-    -o-transition: .5s all ease-in-out;
-    transition: .5s all ease-in-out;
-    background-color: #000;
-    -webkit-transform: skewX(30deg);
-    -ms-transform: skewX(30deg);
-    transform: skewX(30deg);
-    -webkit-transform-origin: bottom left;
-    -ms-transform-origin: bottom left;
-    transform-origin: bottom left;
-}
+            nav ul li a::after {
+                position: absolute;
+                z-index: -1;
+                content: '';
+                width: 100%;
+                height: 100%;
+                left: -150%;
+                top: 0;
+                -webkit-transition: .5s all ease-in-out;
+                -o-transition: .5s all ease-in-out;
+                transition: .5s all ease-in-out;
+                background-color: #000;
+                -webkit-transform: skewX(30deg);
+                -ms-transform: skewX(30deg);
+                transform: skewX(30deg);
+                -webkit-transform-origin: bottom left;
+                -ms-transform-origin: bottom left;
+                transform-origin: bottom left;
+            }
 
-nav ul li a:hover::after{
-    left: 0;
-    width: 150%;
-}
+            nav ul li a:hover::after {
+                left: 0;
+                width: 150%;
+            }
 
-#services, #about, #portfolio, #contact{
+#services, #about, #portfolio, #contact {
     position: relative;
     width: 100%;
     height: 100%;
     padding: 60px 0;
 }
 
-.title{
+.title {
     position: absolute;
     top: 80px;
     left: 50%;
@@ -201,28 +204,28 @@ nav ul li a:hover::after{
     transform: translateX(-50%);
 }
 
-.title h2{
-    position: relative;
-    color: #000;
-    font-size: 24px;
-    text-transform: uppercase;
-    padding: 5px;
-    display: block;
-    word-spacing: -6px;
-}
+    .title h2 {
+        position: relative;
+        color: #000;
+        font-size: 24px;
+        text-transform: uppercase;
+        padding: 5px;
+        display: block;
+        word-spacing: -6px;
+    }
 
-.title h2::after{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    background-color: darkred;
-    height: 4px;
-    border-radius: 2px;
-    width: 100%;
-    left: 0;
-}
+        .title h2::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            background-color: darkred;
+            height: 4px;
+            border-radius: 2px;
+            width: 100%;
+            left: 0;
+        }
 
-.hero-section{
+.hero-section {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -232,20 +235,20 @@ nav ul li a:hover::after{
     text-align: center;
 }
 
-.hero-section h1{
-    font-size: 120px;
-    font-weight: 200;
-    text-transform: uppercase;
-    color: #fff;
-}
+    .hero-section h1 {
+        font-size: 120px;
+        font-weight: 200;
+        text-transform: uppercase;
+        color: #fff;
+    }
 
-.hero-section p{
-    text-transform: capitalize;
-    font-size: 16px;
-    color: azure;
-}
+    .hero-section p {
+        text-transform: capitalize;
+        font-size: 16px;
+        color: azure;
+    }
 
-.btn-work{
+.btn-work {
     position: absolute;
     top: 70%;
     left: 50%;
@@ -265,13 +268,13 @@ nav ul li a:hover::after{
     background-color: transparent;
 }
 
-.btn-work:hover{
-    background-color: #1b6aff;
-    border-color: #1b6aff;
-}
+    .btn-work:hover {
+        background-color: #1b6aff;
+        border-color: #1b6aff;
+    }
 
-@media only screen and (max-width:1200px){
-    .container{
+@media only screen and (max-width:1200px) {
+    .container {
         margin: 0 15px;
         width: calc(100% - 30px);
     }
@@ -286,16 +289,16 @@ nav ul li a:hover::after{
         cursor: pointer;
     }
 
-    .hm-menu span {
-        height: 2px;
-        background-color: #fff;
-        position: absolute;
-        right: 0;
-        border-radius: 1px;
-        -webkit-transition: .3s all ease-in-out;
-        -o-transition: .3s all ease-in-out;
-        transition: .3s all ease-in-out;
-    }
+        .hm-menu span {
+            height: 2px;
+            background-color: #fff;
+            position: absolute;
+            right: 0;
+            border-radius: 1px;
+            -webkit-transition: .3s all ease-in-out;
+            -o-transition: .3s all ease-in-out;
+            transition: .3s all ease-in-out;
+        }
 
     .left {
         margin-bottom: 15px;
@@ -333,69 +336,69 @@ nav ul li a:hover::after{
         align-items: center;
     }
 
-    nav ul li {
-        margin: 0;
-    }
+        nav ul li {
+            margin: 0;
+        }
 
-    nav ul li a {
-        font-size: 22px;
-        height: 60px;
-        line-height: 60px;
-        text-transform: capitalize;
-        letter-spacing: 2px;
-        overflow: visible;
-    }
+            nav ul li a {
+                font-size: 22px;
+                height: 60px;
+                line-height: 60px;
+                text-transform: capitalize;
+                letter-spacing: 2px;
+                overflow: visible;
+            }
 
-    nav ul li a::before {
-        content: '';
-        text-align: center;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        transform: translateX(-50%);
-        font-size: 22px;
-        font-weight: 600;
-        color: #333;
-        z-index: -1;
-        -webkit-transition: .3s all ease-in-out;
-        -o-transition: .3s all ease-in-out;
-        transition: .3s all ease-in-out;
-    }
+                nav ul li a::before {
+                    content: '';
+                    text-align: center;
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    -webkit-transform: translateX(-50%);
+                    -ms-transform: translateX(-50%);
+                    transform: translateX(-50%);
+                    font-size: 22px;
+                    font-weight: 600;
+                    color: #333;
+                    z-index: -1;
+                    -webkit-transition: .3s all ease-in-out;
+                    -o-transition: .3s all ease-in-out;
+                    transition: .3s all ease-in-out;
+                }
 
-    nav ul li:hover:nth-child(1) a::before {
-        content: 'HOME';
-        font-size: 100px;
-    }
+            nav ul li:hover:nth-child(1) a::before {
+                content: 'HOME';
+                font-size: 100px;
+            }
 
-    nav ul li:hover:nth-child(2) a::before {
-        content: 'SERVICES';
-        font-size: 100px;
-    }
+            nav ul li:hover:nth-child(2) a::before {
+                content: 'SERVICES';
+                font-size: 100px;
+            }
 
-    nav ul li:hover:nth-child(3) a::before {
-        content: 'ABOUT';
-        font-size: 100px;
-    }
+            nav ul li:hover:nth-child(3) a::before {
+                content: 'ABOUT';
+                font-size: 100px;
+            }
 
-    nav ul li:hover:nth-child(4) a::before {
-        content: 'PORTFOLIO';
-        font-size: 100px;
-    }
+            nav ul li:hover:nth-child(4) a::before {
+                content: 'PORTFOLIO';
+                font-size: 100px;
+            }
 
-    nav ul li:hover:nth-child(5) a::before {
-        content: 'CONTACT';
-        font-size: 100px;
-    }
+            nav ul li:hover:nth-child(5) a::before {
+                content: 'CONTACT';
+                font-size: 100px;
+            }
 
-    nav ul li a:hover {
-        color: transparent;
-    }
+            nav ul li a:hover {
+                color: transparent;
+            }
 
-    nav ul li a::after {
-        display: none;
-    }
+            nav ul li a::after {
+                display: none;
+            }
 
     header.active {
         height: 380px;
