commits to patient login, register etc. home done

--- a/src/components/patient/patientRegister.css
+++ b/src/components/patient/patientRegister.css
@@ -20,7 +20,7 @@ html, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, 
     font: inherit;
     vertical-align: baseline;
 }
-form {
+#patientRegisterForm {
     color: white;
     opacity: 0.7;
 }
