--- a/src/components/patient/PatientLogin.css
+++ b/src/components/patient/PatientLogin.css
@@ -9,6 +9,10 @@ body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     background: #ededed;
 }
+#patientLogin {
+    margin-top:-15px;
+    border-bottom: solid 1px #333;
+}
 
 input, button {
     border: none;
@@ -27,7 +31,7 @@ input, button {
     overflow: hidden;
     position: relative;
     width: 900px;
-    height: 900px;
+    height: 550px;
     margin: 0 auto 100px;
     background: #fff;
 }
@@ -40,7 +44,7 @@ input, button {
     transition: -webkit-transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out;
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-    padding: 50px 30px 0;
+    padding: 5px 10px 0;
 }
 
 .sub-cont {
@@ -85,30 +89,30 @@ button {
     padding-top: 360px;
 }
 
-.img:before {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 900px;
-    height: 100%;
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQeltK8mnYyTG-_zzz_m_fIZCOjqWTHGJWeectQF8KqckJa1qe3");
-    background-size: cover;
-    -webkit-transition: -webkit-transform 1.2s ease-in-out;
-    transition: -webkit-transform 1.2s ease-in-out;
-    transition: transform 1.2s ease-in-out;
-    transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-}
+    .img:before {
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 900px;
+        height: 100%;
+        background-image: url("https://us.123rf.com/450wm/sergio34/sergio341512/sergio34151200901/49920977-gold-glitter-texture-on-a-black-background-golden-explosion-of-confetti-golden-grainy-abstract-textu.jpg?ver=6");
+        background-size: cover;
+        -webkit-transition: -webkit-transform 1.2s ease-in-out;
+        transition: -webkit-transform 1.2s ease-in-out;
+        transition: transform 1.2s ease-in-out;
+        transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
+    }
 
-.img:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-}
+    .img:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+    }
 
 .cont.s--signup .img:before {
     -webkit-transform: translate3d(640px, 0, 0);
@@ -130,15 +134,15 @@ button {
     transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
 }
 
-.img__text h2 {
-    margin-bottom: 10px;
-    font-weight: normal;
-}
+    .img__text h2 {
+        margin-bottom: 10px;
+        font-weight: normal;
+    }
 
-.img__text p {
-    font-size: 14px;
-    line-height: 1.5;
-}
+    .img__text p {
+        font-size: 14px;
+        line-height: 1.5;
+    }
 
 .cont.s--signup .img__text.m--up {
     -webkit-transform: translateX(520px);
@@ -169,40 +173,43 @@ button {
     cursor: pointer;
 }
 
-.img__btn:after {
-    content: '';
-    z-index: 2;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border: 2px solid #fff;
-    border-radius: 30px;
-}
+    .img__btn:after {
+        content: '';
+        z-index: 2;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+        border-radius: 30px;
+    }
+    #patientLoginForm{
+        left : 30%;
+        position:relative;
+    }
+    .img__btn span {
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        -webkit-transition: -webkit-transform 1.2s;
+        transition: -webkit-transform 1.2s;
+        transition: transform 1.2s;
+        transition: transform 1.2s, -webkit-transform 1.2s;
+    }
 
-.img__btn span {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: -webkit-transform 1.2s;
-    transition: -webkit-transform 1.2s;
-    transition: transform 1.2s;
-    transition: transform 1.2s, -webkit-transform 1.2s;
-}
-
-.img__btn span.m--in {
-    -webkit-transform: translateY(-72px);
-    transform: translateY(-72px);
-}
+        .img__btn span.m--in {
+            -webkit-transform: translateY(-72px);
+            transform: translateY(-72px);
+        }
 
 .cont.s--signup .img__btn span.m--in {
     -webkit-transform: translateY(0);
@@ -223,15 +230,15 @@ h2 {
 label {
     display: block;
     width: 260px;
-    margin: 25px auto 0;
+    margin: 10px auto 0;
     text-align: center;
 }
 
-label span {
-    font-size: 12px;
-    color: #cfcfcf;
-    text-transform: uppercase;
-}
+    label span {
+        font-size: 12px;
+        color: #efb9b9;
+        text-transform: uppercase;
+    }
 
 input {
     display: block;
@@ -239,7 +246,7 @@ input {
     margin-top: 5px;
     padding-bottom: 5px;
     font-size: 16px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+    border-bottom: solid 1px #333;
     text-align: center;
 }
 
@@ -247,13 +254,13 @@ input {
     margin-top: 15px;
     text-align: center;
     font-size: 12px;
-    color: #cfcfcf;
+    color: #efb9b9;
 }
 
 .submit {
     margin-top: 40px;
     margin-bottom: 20px;
-    background: #d4af7a;
+    background: #d83535;
     text-transform: uppercase;
 }
 
@@ -262,10 +269,10 @@ input {
     color: #8fa1c7;
 }
 
-.fb-btn span {
-    font-weight: bold;
-    color: #455a81;
-}
+    .fb-btn span {
+        font-weight: bold;
+        color: #455a81;
+    }
 
 .sign-in {
     -webkit-transition-timing-function: ease-out;
@@ -298,10 +305,10 @@ input {
     width: 32px;
 }
 
-.icon-link img {
-    width: 100%;
-    vertical-align: top;
-}
+    .icon-link img {
+        width: 100%;
+        vertical-align: top;
+    }
 
 .icon-link--twitter {
     left: auto;
