--- a/src/components/patient/PatientLayoutCss.css
+++ b/src/components/patient/PatientLayoutCss.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css);
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css);
+/*@import url(https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css);*/
 
 html {
     box-sizing: border-box;
@@ -474,5 +476,73 @@ td {
 
     .panel.secondary {
         width: 23%;
+    }
+
+    .fa-file-text-o{
+        position: absolute;
+        left: 45%;
+    }
+    .modal-content {
+        position: relative;
+        background-color: #fff;
+        -webkit-background-clip: padding-box;
+        background-clip: padding-box;
+        border: 1px solid #999;
+        border: 1px solid rgba(0, 0, 0, .2);
+        border-radius: 0;
+        outline: 0;
+        -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+        box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+    }
+    #myModal--specialPromo .modal .modal-dialog {
+        -webkit-animation: specialPromo 1s 1 ease-in-out;
+        -moz-animation: specialPromo 1s 1 ease-in-out;
+        -o-animation: specialPromo 1s 1 ease-in-out;
+    }
+
+    @-webkit-keyframes specialPromo {
+        from {
+            -webkit-transform: rotate(172deg) scale(0.46) skew(1deg) translate(0px);
+        }
+        to {
+            -webkit-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
+        }
+    }
+
+    @-moz-keyframes specialPromo {
+        from {
+            -moz-transform: rotate(172deg) scale(0.46) skew(1deg) translate(0px);
+        }
+        to {
+            -moz-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
+        }
+    }
+
+    @-o-keyframes specialPromo {
+        from {
+            -o-transform: rotate(172deg) scale(0.46) skew(1deg) translate(0px);
+        }
+        to {
+            -o-transform: rotate(360deg) scale(1) skew(1deg) translate(0px);
+        }
+    }
+
+    .jumbotron{
+        margin-top: 100px;
+        margin-outside: 30px;
+    }
+
+    button.close{
+        position: absolute;
+        right: -100px;
+    }
+
+    select{
+        background-color: white;
+    }
+
+    #appointmentForm{
+        padding: 20px;
+        margin: 20px;
     }
 }
