--- a/src/components/patient/patientRegister.css
+++ b/src/components/patient/patientRegister.css
@@ -172,7 +172,7 @@ input[type="text"], input[type="email"], input[type="password"] {
     background-position: -800px 0;
     background-size: 100%;
     background-repeat: no-repeat;
-    color: #fff;
+    color: #000;
     font-family: 'Roboto', sans-serif;
 }
 
