--- a/src/components/patient/PatientLayoutCss.css
+++ b/src/components/patient/PatientLayoutCss.css
@@ -1,9 +1,12 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css);
 @import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css);
 /*@import url(https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css);*/
 
+#form1{
+    font-size:15px;
+}
 html {
     box-sizing: border-box;
 }
