--- a/src/components/patient/patientRegister.css
+++ b/src/components/patient/patientRegister.css
@@ -17,12 +17,14 @@ html, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, 
     padding: 0;
     border: 0;
     font-size: 100%;
+    font-size:30px;
     font: inherit;
     vertical-align: baseline;
 }
 #patientRegisterForm {
     color: white;
     opacity: 0.7;
+    font-size:15px;
 }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
@@ -278,7 +280,7 @@ input.checkbox {
 
     input.checkbox:before {
         content: "";
-        left:10px;
+        left:-5px;
         position: absolute;
         width: 1.2em;
         height: 1.2em;
